--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,6 @@
   ],
   "start_url": "/WaterDo-PWA/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#a6c6f5",
+  "background_color": "#f5f5f5"
 }
